--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-particles-js": "^2.3.0",
     "react-spring": "^6.1.6",
     "styled-components": "^4.0.3"
   },
