--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-github-corner": "^2.3.0",
     "react-helmet": "^5.2.0",
     "react-particles-js": "^2.3.0",
     "react-spring": "^6.1.6",
